; ModuleID = '/home/carl/AnghaBench/git/refs/extr_files-backend.c_files_reflog_path.c'
source_filename = "/home/carl/AnghaBench/git/refs/extr_files-backend.c_files_reflog_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.files_ref_store = type { i32, i32 }
%struct.strbuf = type { i32 }

@.str = private unnamed_addr constant [11 x i8] c"%s/logs/%s\00", align 1
@.str.1 = private unnamed_addr constant [30 x i8] c"unknown ref type %d of ref %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.files_ref_store*, %struct.strbuf*, i8*)* @files_reflog_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @files_reflog_path(%struct.files_ref_store* %0, %struct.strbuf* %1, i8* %2) #0 {
  %4 = alloca %struct.files_ref_store*, align 8
  %5 = alloca %struct.strbuf*, align 8
  %6 = alloca i8*, align 8
  store %struct.files_ref_store* %0, %struct.files_ref_store** %4, align 8
  store %struct.strbuf* %1, %struct.strbuf** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i8*, i8** %6, align 8
  %8 = call i32 @ref_type(i8* %7)
  switch i32 %8, label %28 [
    i32 129, label %9
    i32 128, label %9
    i32 130, label %16
    i32 132, label %16
    i32 131, label %21
  ]

9:                                                ; preds = %3, %3
  %10 = load %struct.strbuf*, %struct.strbuf** %5, align 8
  %11 = load %struct.files_ref_store*, %struct.files_ref_store** %4, align 8
  %12 = getelementptr inbounds %struct.files_ref_store, %struct.files_ref_store* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = load i8*, i8** %6, align 8
  %15 = call i32 @strbuf_addf(%struct.strbuf* %10, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i32 %13, i8* %14)
  br label %33

16:                                               ; preds = %3, %3
  %17 = load %struct.files_ref_store*, %struct.files_ref_store** %4, align 8
  %18 = load %struct.strbuf*, %struct.strbuf** %5, align 8
  %19 = load i8*, i8** %6, align 8
  %20 = call i32 @files_reflog_path_other_worktrees(%struct.files_ref_store* %17, %struct.strbuf* %18, i8* %19)
  br label %33

21:                                               ; preds = %3
  %22 = load %struct.strbuf*, %struct.strbuf** %5, align 8
  %23 = load %struct.files_ref_store*, %struct.files_ref_store** %4, align 8
  %24 = getelementptr inbounds %struct.files_ref_store, %struct.files_ref_store* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load i8*, i8** %6, align 8
  %27 = call i32 @strbuf_addf(%struct.strbuf* %22, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i32 %25, i8* %26)
  br label %33

28:                                               ; preds = %3
  %29 = load i8*, i8** %6, align 8
  %30 = call i32 @ref_type(i8* %29)
  %31 = load i8*, i8** %6, align 8
  %32 = call i32 @BUG(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.1, i64 0, i64 0), i32 %30, i8* %31)
  br label %33

33:                                               ; preds = %28, %21, %16, %9
  ret void
}

declare dso_local i32 @ref_type(i8*) #1

declare dso_local i32 @strbuf_addf(%struct.strbuf*, i8*, i32, i8*) #1

declare dso_local i32 @files_reflog_path_other_worktrees(%struct.files_ref_store*, %struct.strbuf*, i8*) #1

declare dso_local i32 @BUG(i8*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
